minor edit input field text shift fix

--- a/src/app/users/components/Section.less
+++ b/src/app/users/components/Section.less
@@ -88,6 +88,7 @@ html *
   text-transform: uppercase;
   font-size: 12px;
   padding: 2px;
+  margin-bottom: 1px;
   text-align: left;
 }
 
@@ -95,6 +96,7 @@ html *
   padding: 2px;
   font-size: 16px;
   text-align: left;
+  margin-top: 3px;
   .dropdown-wrapper {
     max-width: 450px;
   }
@@ -102,8 +104,8 @@ html *
 
 .profile-pic {
   height: 0;
-  width: 20%;
-  padding-bottom: 20%;
+  width: 22%;
+  padding-bottom: 22%;
   margin-right: 40px;
 }
 
@@ -118,6 +120,11 @@ img {
   flex-grow: 4.5;
 }
 
+.profile-input {
+  //max-height: 20px;
+  margin-left: -6px;
+}
+
 .no-column {
   display: flex;
   flex-wrap: wrap;
@@ -130,6 +137,7 @@ img {
   flex-grow: 1;
   text-align: left;
   justify-content: space-around;
+  min-width: 230px;
 }
 
 //.profile-col-2 {
